deploy/basicsetting.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: poc-basicsetting
#   namespace: poc
#   labels:
#     app.kubernetes.io/name: basicsetting
#     app.kubernetes.io/part-of: poc
# spec:
#   type: ClusterIP
#   ports:
#   - port: 8080
#     targetPort: 8082
#   selector:
#     app: poc-basicsetting
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-basicsetting
  namespace: poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-basicsetting
  template:
    metadata:
      labels:
        app: poc-basicsetting
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "basicsetting"
        dapr.io/app-port: "8082"
        dapr.io/config: "otel"
    spec:
      containers:
      - name: poc-basicsetting
        image: ${CR_URL}$/daprapps-poc-basicsetting:${IMAGE_TAG}$
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
