deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ingress
  namespace: poc
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/websocket-services: poc-portal
      nginx.org/websocket-services: poc-portal
      nginx.ingress.kubernetes.io/affinity: "cookie"
      nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
      nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
      nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"      
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poc-portal
            port: 
              number: 8080
      # - path: /gateway
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: poc-gateway
      #       port: 
      #         number: 8080
